--- a/_assets/scoreboard_boca_2a_comp_inf/score.html
+++ b/_assets/scoreboard_boca_2a_comp_inf/score.html
@@ -58,11 +58,14 @@ body {
 
 <!-- Header -->
 <div class="header" id="myHeader">
-  <h1>Image Grid</h1>
-  <p>Click on the buttons to change the grid view.</p>
-  <button class="btn" onclick="one(0)">1</button>
-  <button class="btn" onclick="one(1)">2</button>
-  <button class="btn" onclick="one(2)">4</button>
+  <h1>Placar Final</h1>
+  <button class="btn" onclick="one(0)">Geral</button>
+  <button class="btn" onclick="one(1)">2017</button>
+  <button class="btn" onclick="one(2)">2018</button>
+  <button class="btn" onclick="one(3)">2017-1</button>
+  <button class="btn" onclick="one(4)">2017-2</button>
+  <button class="btn" onclick="one(5)">2018-1</button>
+  <button class="btn" onclick="one(6)">2018-2</button>
 </div>
 
 <!-- Photo Grid -->
@@ -78,7 +81,9 @@ body {
 // Declare a loop variable
 var i;
 var links = ['https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/all.png?raw=true', 'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m17.png?raw=true', 'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m18.png?raw=true', 'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m171.png?raw=true',
-'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m181.png?raw=true'];
+'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m172.png?raw=true',
+'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m181.png?raw=true',
+'https://github.com/maratonago/maratonago.github.io/blob/master/_assets/images/m182.png?raw=true'];
 
 // Full-width images
 function one(id) {
